--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Titalr Page</title>
+  <title>Test Page</title>
 </head>
 
 <body>
-  <h1>Tital Page</h1>
+  <h1>Test Page</h1>
   <p> This is a paragraph.</p>  
 </body>
 
