updated site-plan files

--- a/site-plan.html
+++ b/site-plan.html
@@ -2,29 +2,41 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>[What should this content be?]</title>
+    <title>Raging River Expeditions' Site Plan</title>
     <link href="css/site-plan.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <h1>Dry Oar Site Plan</h1>
-      <div class="signature">[Ken Tolman]</div>
+      <h1>Raging River Expeditions' Site Plan</h1>
+      <div class="signature">Ken Tolman</div>
     </header>
     <main>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>
+      <p>The purpose of this site is to provide our company specific information to the user.  These would be items like
+         why we do what we do, what we do and how we do it.  This site would provide our contact methods and a way to 
+         sign up for an excurion.</p>
+
+      
       <h3>Audience</h3>
-      <p>[Your audience here]</p>
+      <p>This site will provide information to people looking for a new and wonderful experience or a repeat of a previous
+         thrill that they couldn't get over.  The individuals coming to this site will be from all walks of life, nearly any
+         age, as long as health issues are not a problem.  They will be able to gather the majority of the information they
+         need to chhose us as their host and have the additional options to ask further questions if needed.  They will also
+         be able to schedule expeditions directly online.
+      </p>
+      <hr>
+
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/WWR_Logo.png" alt="Dry Oar Logo">
+      <img src="images/WWR_Logo.png" alt="Raging River Expeditions Logo">
       <hr>
+      
       <h2>Style Guide</h2>
       <h3>Color Palette</h3>
       <p>
-        Palette URL:<a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+        Palette URL:<a href="https://coolors.co/0a2463-92140c-1e1e24-ffcf99-fff8f0" target="_blank">https://coolors.co/0a2463-92140c-1e1e24-ffcf99-fff8f0</a>
       </p>
       <table class="colors">
         <tr>
@@ -34,18 +46,21 @@
           <th>Accent 2</th>
         </tr>
         <tr>
-          <td class="primary">[#396E94]</td>
-          <td class="secondary">[#E7C24F]</td>
-          <td class="accent1">[#A43312]</td>
-          <td class="accent2"></td>
+          <td class="primary">[#0A2463]</td>
+          <td class="secondary">[#92140C]</td>
+          <td class="accent1">[#1E1E24]</td>
+          <td class="accent2">[#FFCF99]</td>
         </tr>
       </table>
+      <br>
+      <hr>
 
       <h3>Typography</h3>
-      <h4>Heading Font: [Font name here]</h4>
-      <p>[Reasoning]</p>
-      <h4>Paragraph Font: [Font Name here]</h4>
-      <p>[Reasoning]</p>
+      <h4>Heading Font: Open Sans, sans-serif</h4>
+      <p>I found several websites that listed these two fonts as top choices because they work well together.  They are both crisp
+         and extremely legible.  They also work well if they are swapped around.</p>
+      <h4>Paragraph Font: Roboto, sans-serif</h4>
+      <p>Same comment as above.</p>
       <h4>Normal paragraph example</h4>
       <p>
         The best Whitewater Rafting in Colorado, White Water Rafting Company
@@ -60,18 +75,28 @@
         adventures you are seeking, White Water Rafting Company can make it
         happen for you.
       </p>
+      <hr>
+
       <h3>Navigation</h3>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Page2</a></li>
-          <li><a href="#">Page3</a></li>
-        </ul>
+          <li><a href="#">Locations</a></li>
+          <li><a href="#">Schedule an Excursion</a></li>
+          <li><a href="#">About RRE</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>        
       </nav>
+      <hr>
+
       <h3>Site Map</h3>
       <p>Coming soon ...</p>
+      <hr>
+
       <h3>Wireframes</h3>
       <p>Coming soon ...</p>
+      <hr>
+
     </main>
     <footer>Ken Tolman | BYU-Idaho | WDD 130 - Web Fundamentals</footer>
   </body>
