push wk3 assignments

--- a/site-plan.html
+++ b/site-plan.html
@@ -30,7 +30,7 @@
 
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/WWR_Logo.png" alt="Raging River Expeditions Logo">
+      <img src="images/wwr_logo.png" alt="Raging River Expeditions Logo">
       <hr>
       
       <h2>Style Guide</h2>
