--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <h2>Assignment Links</h2>
       <ul>
         <li>Week 1: <a href="aboutme.html">About Me</a></li>
-        <li>Week 2: <a href="site-plan.html">Dry Oar Site Plan</a></li>
-        <li>Week 3: <a href="#">...</a></li>
+        <li>Week 2: <a href="site-plan.html">Raging River Site Plan</a></li>
+        <li>Week 3: <a href="troubleshooting.html">Troubleshooting Activity</a></li>
+        <li>Week 4: <a href="#">...</a></li>
       </ul>
     </main>
     <footer>
