--- a/project/index.html
+++ b/project/index.html
@@ -22,10 +22,9 @@
     </header>
     <main>
       <div>
-        <img src="/images/rafting rush.jpg" alt="What we do">
+        <img src="/images/rafting_rush.jpg" alt="What we do">
       </div>
       <section>
-        <img src="/images/rafting relax.jpg" alt="Relaxing river trip">
         <h2>
           We run rivers to relax
         </h2>
@@ -35,18 +34,19 @@
           oars dry for us means taking time to look around and notice the beauty 
           that surrounds the rivers we love.
         </p>
+        <img src="/images/rafting_relax.jpg" alt="Relaxing river trip">
       </section>
       <section>
-        <img src="/images/rafting fun.jpg" alt="White water fun">
         <h2>
           We run whitewaterfor the rush
         </h2>
-        <p>
+         <p>
           That doesn't mean we don't also like rapids. Opposites in all things after 
           all. We believe that that tenseness that comes when you are looking down 
           the tongue of a big string of waves makes you appreciate the calm beautiful 
           water that always follows even more.
         </p>
+        <img src="/images/rafting_fun.jpg" alt="White water fun">
       </section>
       <section>
         <h2>
@@ -61,6 +61,9 @@
     </main>
     <footer>
       &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130 - Web Fundamentals
+      <img src="/images/facebook.png" alt="Facebook icon">
+      <img src="/images/pinterest.png" alt="Pintrest icon">
+      <img src="/images/twitter.png" alt="Twitter icon">
     </footer>
   </body>
 </html>
