--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Week 1: <a href="aboutme.html">About Me</a></li>
         <li>Week 2: <a href="site-plan.html">Raging River Site Plan</a></li>
         <li>Week 3: <a href="troubleshooting.html">Troubleshooting Activity</a></li>
+        <li>Week 3: <a href="project/">Raging River Excursions home</a></li>
         <li>Week 4: <a href="#">...</a></li>
       </ul>
     </main>
