--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <img src="/images/wwr_logo.png" alt="Raging River Expeditions Logo">
+      <img src="/images/rre_logo.png" alt="Raging River Expeditions Logo">
       <h1>Raging River Expeditions</h1>
       <nav>
         <ul>
