project index.html updates

--- a/project/index.html
+++ b/project/index.html
@@ -61,9 +61,9 @@
     </main>
     <footer>
       &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130 - Web Fundamentals
-      <img src="/images/facebook.png" alt="Facebook icon">
-      <img src="/images/pinterest.png" alt="Pintrest icon">
-      <img src="/images/twitter.png" alt="Twitter icon">
+      <img src="/images/facebook.png/30/30" alt="Facebook icon">
+      <img src="/images/pinterest.png/30/30" alt="Pintrest icon">
+      <img src="/images/twitter.png/30/30" alt="Twitter icon">
     </footer>
   </body>
 </html>
