major changes to rafting project files

--- a/project/index.html
+++ b/project/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raging River Expeditions - Your adventure begins here!</title>
     <meta name="description" content="This is the home page for Raging River Expeditions.  This page tells the visitor what we do and why we do it.">
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
 
   <body>
     <header>
-      <img src="/images/rre_logo.png" alt="Raging River Expeditions Logo">
+      <img src="images/rre_logo.png" alt="Raging River Expeditions Logo">
       <h1>Raging River Expeditions</h1>
+    </header>
       <nav>
         <ul>
-          <li><a href="#home">Home</a></li>
+          <li><a href="/project/">Home</a></li>
           <li><a href="#locations">Locations</a></li>
           <li><a href="#schedule">Schedule an Excursion</a></li>
         </ul>        
       </nav>
-    </header>
+    
     <main>
-      <div>
-        <img src="/images/rafting_rush.jpg" alt="What we do">
+      <div hero>
+        <img src="images/rafting_rush.jpg" alt="What we do">
       </div>
       <section>
         <h2>
@@ -34,7 +36,7 @@
           oars dry for us means taking time to look around and notice the beauty 
           that surrounds the rivers we love.
         </p>
-        <img src="/images/rafting_relax.jpg" alt="Relaxing river trip">
+        <img src="images/rafting_relax.jpg" alt="Relaxing river trip">
       </section>
       <section>
         <h2>
@@ -46,7 +48,7 @@
           the tongue of a big string of waves makes you appreciate the calm beautiful 
           water that always follows even more.
         </p>
-        <img src="/images/rafting_fun.jpg" alt="White water fun">
+        <img src="images/rafting_fun.jpg" alt="White water fun">
       </section>
       <section>
         <h2>
@@ -60,10 +62,13 @@
       </section>
     </main>
     <footer>
-      &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130
-      <img src="/images/facebook.png" alt="Facebook icon">
-      <img src="/images/pinterest.png" alt="Pintrest icon">
-      <img src="/images/twitter.png" alt="Twitter icon">
+      <div class = social>
+        &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130
+        <img src="images/facebook.png" alt="Facebook icon" style="width:35px;height:35px;border:0;">
+        <img src="images/pinterest.png" alt="Pintrest icon" style="width:35px;height:35px;border:0;">
+        <img src="images/twitter.png" alt="Twitter icon" style="width:35px;height:35px;border:0;">
+      </div>
     </footer>
+
   </body>
 </html>
