--- a/site-plan.html
+++ b/site-plan.html
@@ -30,13 +30,13 @@
 
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/wwr_logo.png" alt="Raging River Expeditions Logo">
+      <img src="images/rre_logo.png" alt="Raging River Expeditions Logo">
       <hr>
       
       <h2>Style Guide</h2>
       <h3>Color Palette</h3>
       <p>
-        Palette URL:<a href="https://coolors.co/0a2463-92140c-1e1e24-ffcf99-fff8f0" target="_blank">https://coolors.co/0a2463-92140c-1e1e24-ffcf99-fff8f0</a>
+        Palette URL:<a href="https://coolors.co/283d3b-6cd4ff-ccc7b9-b8c5d6-4b3f72" target="_blank">https://coolors.co/283d3b-b8c5d6-a7cdbd-ccc7b9</a>
       </p>
       <table class="colors">
         <tr>
@@ -46,10 +46,10 @@
           <th>Accent 2</th>
         </tr>
         <tr>
-          <td class="primary">[#0A2463]</td>
-          <td class="secondary">[#92140C]</td>
-          <td class="accent1">[#1E1E24]</td>
-          <td class="accent2">[#FFCF99]</td>
+          <td class="primary">[#283D3B]</td>
+          <td class="secondary">[#6CD4FF]</td>
+          <td class="accent1">[#CCC7B9]</td>
+          <td class="accent2">[#B8C5D6]</td>
         </tr>
       </table>
       <br>
