multiple chnges to the home page

--- a/project/index.html
+++ b/project/index.html
@@ -14,14 +14,13 @@
       <img src="images/rre_logo.png" alt="Raging River Expeditions Logo">
       <h1>Raging River Expeditions</h1>
     </header>
-      <nav>
-        <ul>
-          <li><a href="/project/">Home</a></li>
-          <li><a href="#locations">Locations</a></li>
-          <li><a href="#schedule">Schedule an Excursion</a></li>
-        </ul>        
-      </nav>
-    
+    <nav>
+      <ul>
+        <li><a href="/project/">Home</a></li>
+        <li><a href="#locations">Locations</a></li>
+        <li><a href="#schedule">Schedule an Excursion</a></li>
+      </ul>        
+    </nav>
     <main>
       <div hero>
         <img src="images/rafting_rush.jpg" alt="What we do">
@@ -62,11 +61,13 @@
       </section>
     </main>
     <footer>
-      <div class = social>
+      <p>
         &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130
-        <img src="images/facebook.png" alt="Facebook icon" style="width:35px;height:35px;border:0;">
-        <img src="images/pinterest.png" alt="Pintrest icon" style="width:35px;height:35px;border:0;">
-        <img src="images/twitter.png" alt="Twitter icon" style="width:35px;height:35px;border:0;">
+      </p>
+      <div class="social">
+        <img src="images/facebookicon.png" alt="Facebook icon" style="width:35px;height:35px;border:0;">
+        <img src="images/instagramicon.png" alt="Instagram icon" style="width:35px;height:35px;border:0;">
+        <img src="images/youtubeicon.png" alt="Youtube icon" style="width:35px;height:35px;border:0;">
       </div>
     </footer>
 
