--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
       <h2>Assignment Links</h2>
       <ul>
         <li>Week 1: <a href="aboutme.html">About Me</a></li>
+        <br>
         <li>Week 2: <a href="site-plan.html">Raging River Site Plan</a></li>
+        <br>
         <li>Week 3: <a href="troubleshooting.html">Troubleshooting Activity</a></li>
-        <li>Week 3: <a href="project/">Raging River Excursions home</a></li>
-        <li>Week 4: <a href="#">...</a></li>
+        <li>Week 3: <a href="project/">Raging River Excursions</a></li>
+        <br>
+        <li>Week 4: <a href="project/">Raging River Excursions - w/CSS</a></li>
+        <br>
+        
       </ul>
     </main>
     <footer>
