--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
       </ul>        
     </nav>
     <main>
-      <div hero>
+      <div class="hero">
         <img src="images/rafting_rush.jpg" alt="What we do">
       </div>
       <section>
@@ -65,9 +65,9 @@
         &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130
       </p>
       <div class="social">
-        <img src="images/facebookicon.png" alt="Facebook icon" style="width:35px;height:35px;border:0;">
-        <img src="images/instagramicon.png" alt="Instagram icon" style="width:35px;height:35px;border:0;">
-        <img src="images/youtubeicon.png" alt="Youtube icon" style="width:35px;height:35px;border:0;">
+        <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
+        <a href="https://www.instagram.com" target="_blank" class="social" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
+        <a href="https://www.youtube.com" target="_blank" class="social" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
       </div>
     </footer>
 
