--- a/site-plan.html
+++ b/site-plan.html
@@ -36,7 +36,7 @@
       <h2>Style Guide</h2>
       <h3>Color Palette</h3>
       <p>
-        Palette URL:<a href="https://coolors.co/283d3b-6cd4ff-ccc7b9-b8c5d6-4b3f72" target="_blank">https://coolors.co/283d3b-b8c5d6-a7cdbd-ccc7b9</a>
+        Palette URL:<a href="https://coolors.co/283d3b-ccc7b9-b8c5d6-6cd4ff-4b3f72" target="_blank">https://coolors.co/283d3b-b8c5d6-a7cdbd-ccc7b9</a>
       </p>
       <table class="colors">
         <tr>
@@ -47,9 +47,9 @@
         </tr>
         <tr>
           <td class="primary">[#283D3B]</td>
-          <td class="secondary">[#6CD4FF]</td>
-          <td class="accent1">[#CCC7B9]</td>
-          <td class="accent2">[#B8C5D6]</td>
+          <td class="secondary">[#CCC7B9]</td>
+          <td class="accent1">[#B8C5D6]</td>
+          <td class="accent2">[#6CD4FF]</td>
         </tr>
       </table>
       <br>
