--- a/project/index.html
+++ b/project/index.html
@@ -4,72 +4,80 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Raging River Expeditions - Your adventure begins here!</title>
-    <meta name="description" content="This is the home page for Raging River Expeditions.  This page tells the visitor what we do and why we do it.">
+    <title>Raging River Rafters - Your adventure begins here!</title>
+    <meta name="description" content="This is the home page for Raging River Rafters.  This page tells the visitor what we do and why we do it.">
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 
   <body>
-    <header>
-      <img src="images/rre_logo.png" alt="Raging River Expeditions Logo">
-      <h1>Raging River Expeditions</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="/project/">Home</a></li>
-        <li><a href="#locations">Locations</a></li>
-        <li><a href="#schedule">Schedule an Excursion</a></li>
-      </ul>        
-    </nav>
-    <main>
-      <div class="hero">
-        <img src="images/rafting_rush.jpg" alt="What we do">
-      </div>
-      <section>
-        <h2>
-          We run rivers to relax
-        </h2>
-        <p>
-          We believe that there is nothing like a river trip for relaxing. That 
-          is why we subscribe to the dry oar philosophy of boating. Keeping your 
-          oars dry for us means taking time to look around and notice the beauty 
-          that surrounds the rivers we love.
-        </p>
-        <img src="images/rafting_relax.jpg" alt="Relaxing river trip">
-      </section>
-      <section>
-        <h2>
-          We run whitewater for the rush
-        </h2>
-         <p>
-          That doesn't mean we don't also like rapids. Opposites in all things after 
-          all. We believe that that tenseness that comes when you are looking down 
-          the tongue of a big string of waves makes you appreciate the calm beautiful 
-          water that always follows even more.
-        </p>
-        <img src="images/rafting_fun.jpg" alt="White water fun">
-      </section>
-      <section>
-        <h2>
-          Come run with us!
-        </h2>
-        <p>
-          We invite you to come relax with us on one of the amazing rivers we visit. 
-          Check out our trips and let us know which one best suits you. We're waiting 
-          to hear from you!
-        </p>
-      </section>
-    </main>
-    <footer>
-      <p>
-        &copy;2020 Raging River Expeditions - Ken Tolman - WDD 130
-      </p>
-      <div class="social">
-        <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
-        <a href="https://www.instagram.com" target="_blank" class="social" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
-        <a href="https://www.youtube.com" target="_blank" class="social" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
-      </div>
-    </footer>
-
+    <div class="page-container">
+      <header>
+        <picture>
+          <img src="images/rrr_logo.png" alt="Raging River Rafters Logo">
+        </picture>
+        <section class="heading">
+          <h1>Raging River Rafters</h1>
+          <div class="motto">Your adventure begins here!</div>
+        </section>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>        
+      </nav>
+      <main>
+        <div class="hero">
+          <img src="images/rafting_rush.jpg" alt="What we do">
+        </div>
+        <section>
+          <h2>
+            We run rivers to relax
+          </h2>
+          <p>
+            We believe that there is nothing like a river trip for relaxing. That 
+            is why we subscribe to the dry oar philosophy of boating. Keeping your 
+            oars dry for us means taking time to look around and notice the beauty 
+            that surrounds the rivers we love.
+          </p>
+          <img src="images/rafting_relax.jpg" alt="Relaxing river trip">
+        </section>
+        <section>
+          <h2>
+            We run whitewater for the rush
+          </h2>
+          <p>
+            That doesn't mean we don't also like rapids. Opposites in all things after 
+            all. We believe that that tenseness that comes when you are looking down 
+            the tongue of a big string of waves makes you appreciate the calm beautiful 
+            water that always follows even more.
+          </p>
+          <img src="images/rafting_fun.jpg" alt="White water fun">
+        </section>
+        <section>
+          <h2>
+            Come run with us!
+          </h2>
+          <p>
+            We invite you to come relax with us on one of the amazing rivers we visit. 
+            Check out our trips and let us know which one best suits you. We're waiting 
+            to hear from you!
+          </p>
+        </section>
+      </main>
+      <footer>
+        <div class="footer">
+          <p>
+            &copy;2020 Raging River Rafters - Ken Tolman - WDD 130
+          </p>
+        </div>
+        <div class="social">
+          <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
+          <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
+          <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
