--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <li>Week 2: <a href="site-plan.html">Raging River Site Plan</a></li>
         <br>
         <li>Week 3: <a href="troubleshooting.html">Troubleshooting Activity</a></li>
-        <li>Week 3: <a href="project/">Raging River Excursions</a></li>
+        <li>Week 3: <a href="project/">Raging River Rafters</a></li>
         <br>
-        <li>Week 4: <a href="project/">Raging River Excursions - w/CSS</a></li>
+        <li>Week 4: <a href="project/">Raging River Rafters - w/CSS</a></li>
         <br>
-        
+        <li>Week 5: <a href="project/">Raging River Rafters - w/CSS</a></li>
+        <br>
       </ul>
     </main>
     <footer>
