--- a/site-plan.html
+++ b/site-plan.html
@@ -2,13 +2,13 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Raging River Expeditions' Site Plan</title>
+    <title>Raging River Rafters' Site Plan</title>
     <link href="css/site-plan.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <h1>Raging River Expeditions' Site Plan</h1>
+      <h1>Raging River Rafters' Site Plan</h1>
       <div class="signature">Ken Tolman</div>
     </header>
     <main>
@@ -30,7 +30,7 @@
 
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/rre_logo.png" alt="Raging River Expeditions Logo">
+      <img src="images/rrr_logo.png" alt="Raging River Rafters Logo">
       <hr>
       
       <h2>Style Guide</h2>
