--- a/project/index.html
+++ b/project/index.html
@@ -32,38 +32,54 @@
           <img src="images/rafting_rush.jpg" alt="What we do">
         </div>
         <section>
-          <h2>
-            We run rivers to relax
-          </h2>
-          <p>
-            We believe that there is nothing like a river trip for relaxing. That 
-            is why we subscribe to the dry oar philosophy of boating. Keeping your 
-            oars dry for us means taking time to look around and notice the beauty 
-            that surrounds the rivers we love.
-          </p>
-          <img src="images/rafting_relax.jpg" alt="Relaxing river trip">
+          <div class="h2-headings">
+            <h2>
+              We run rivers to relax
+            </h2>
+          </div>
+          <div class="body-parapgraph">
+            <p>
+              We believe that there is nothing like a river trip for relaxing. That 
+              is why we subscribe to the dry oar philosophy of boating. Keeping your 
+              oars dry for us means taking time to look around and notice the beauty 
+              that surrounds the rivers we love.
+            </p>
+          </div>
+          <div class="main-image">
+            <img src="images/rafting_relax.jpg" alt="Relaxing river trip">
+          </div>
         </section>
         <section>
-          <h2>
-            We run whitewater for the rush
-          </h2>
-          <p>
-            That doesn't mean we don't also like rapids. Opposites in all things after 
-            all. We believe that that tenseness that comes when you are looking down 
-            the tongue of a big string of waves makes you appreciate the calm beautiful 
-            water that always follows even more.
-          </p>
-          <img src="images/rafting_fun.jpg" alt="White water fun">
+          <div class="h2-headings">
+            <h2>
+              We run whitewater for the rush
+            </h2>
+        </div>
+        <div class="body-parapgraph">
+            <p>
+              That doesn't mean we don't also like rapids. Opposites in all things after 
+              all. We believe that that tenseness that comes when you are looking down 
+              the tongue of a big string of waves makes you appreciate the calm beautiful 
+              water that always follows even more.
+            </p>
+        </div>
+          <div class="main-image">
+            <img src="images/rafting_fun.jpg" alt="White water fun">
+          </div>
         </section>
         <section>
-          <h2>
-            Come run with us!
-          </h2>
-          <p>
-            We invite you to come relax with us on one of the amazing rivers we visit. 
-            Check out our trips and let us know which one best suits you. We're waiting 
-            to hear from you!
-          </p>
+          <div class="h2-headings">
+            <h2>
+              Come run with us!
+            </h2>
+          </div>
+          <div class="body-parapgraph">
+            <p>
+              We invite you to come relax with us on one of the amazing rivers we visit. 
+              Check out our trips and let us know which one best suits you. We're waiting 
+              to hear from you!
+            </p>
+          </div>
         </section>
       </main>
       <footer>
@@ -72,7 +88,7 @@
             &copy;2020 Raging River Rafters - Ken Tolman - WDD 130
           </p>
         </div>
-        <div class="social">
+        <div class="social-images">
           <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
           <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
           <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
