--- a/project/index.html
+++ b/project/index.html
@@ -28,7 +28,7 @@
         </ul>        
       </nav>
       <main>
-        <div class="hero">
+        <div>
           <img src="images/rafting_rush.jpg" alt="What we do">
         </div>
         <section>
