--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <br>
         <li>Week 5: <a href="project/">Raging River Rafters - w/CSS</a></li>
         <br>
+        <li>Week 6: <a href="w6-exercise-1.html">CSS Layout Activity</a></li>
+        <br>
       </ul>
     </main>
     <footer>
