wk6 challenge added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <br>
         <li>Week 5: <a href="project/">Raging River Rafters - w/CSS</a></li>
         <br>
-        <li>Week 6: <a href="w6-exercise-1.html">CSS Layout Activity</a></li>
+        <li>Week 6: <a href="w6-exercise-1.html">Activity: CSS Layout</a></li>
+        <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge (coming)</a></li>
+        <li>Week 6: <a href="w6layoutassignment.html">Assignment: CSS Layout and Positioning (coming)</a></li>
+        
         <br>
       </ul>
     </main>
