--- a/w6-exercise-1-challenge.html
+++ b/w6-exercise-1-challenge.html
@@ -3,8 +3,8 @@
  <head>
   <meta name="charset" content="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDD 130 | Week 6 Activity | Ken Tolman</title>
-  <link rel="stylesheet" href="css/w6.css">
+  <title>WDD 130 | Week 6 Activity Challenge | Ken Tolman</title>
+  <link rel="stylesheet" href="css/w6-challenge.css">
  </head>
  <body>
    <h1>CSS Layout and Positioning</h1>
@@ -14,11 +14,11 @@
      <img src="https://byui-cit.github.io/wdd130/images/example1.png" alt="Activity 1">
      <h2>Your Solution</h2>
        <div class="content1">
-         <div class="red1">"Challenge"</div>
+         <div class="red1"></div>
          <div class="green1"></div>
-         <div class="green1"></div>
+         <div class="green2"></div>
          <div class="gold1"></div>
-         <div class="gold1"></div>
+         <div class="gold2"></div>
          <div class="blue1"></div>
        </div>
    </section>
