--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li>Week 5: <a href="project/">Raging River Rafters - w/CSS</a></li>
         <br>
         <li>Week 6: <a href="w6-exercise-1.html">Activity: CSS Layout</a></li>
-        <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge (coming)</a></li>
+        <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
         <li>Week 6: <a href="w6layoutassignment.html">Assignment: CSS Layout and Positioning (coming)</a></li>
         
         <br>
