--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>
         <li>Week 4: <a href="project/">Raging River Rafters - w/CSS</a></li>
         <br>
-        <li>Week 5: <a href="project/">Raging River Rafters - w/CSS</a></li>
+        <li>Week 5: <a href="project/">Raging River Rafters - w/more CSS</a></li>
         <br>
         <li>Week 6: <a href="w6-exercise-1.html">Activity: CSS Layout</a></li>
         <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
