--- a/w6-exercise-1.html
+++ b/w6-exercise-1.html
@@ -14,7 +14,7 @@
      <img src="https://byui-cit.github.io/wdd130/images/example1.png" alt="Activity 1">
      <h2>Your Solution</h2>
        <div class="content1">
-         <div class="red1">"Challenge"</div>
+         <div class="red1"></div>
          <div class="green1"></div>
          <div class="green1"></div>
          <div class="gold1"></div>
