more updates for wk6

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <br>
         <li>Week 6: <a href="w6-exercise-1.html">Activity: CSS Layout</a></li>
         <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
-        <li>Week 6: <a href="w6layoutassignment.html">Assignment: CSS Layout and Positioning (coming)</a></li>
-        
+        <li>Week 6: <a href="w6layoutassignment.html">Assignment: CSS Layout and Positioning</a></li>
         <br>
       </ul>
     </main>
