--- a/w6layoutassignment.html
+++ b/w6layoutassignment.html
@@ -1,1 +1,63 @@
-html
+<!DOCTYPE html>
+<html lang="en-us">
+  
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>WDD 130 | Week 6 Assignment | Ken Tolman</title>
+    <meta name="description" content="This is the assignment WDD 130 Week 6." />
+    <link rel="stylesheet" href="css/w6.css"/>
+  </head>
+
+  <body>
+    <div class="activity">
+      <h2>Layout 2</h2>
+      <div class="content2">
+        <div class="red2"></div>
+        <div class="green2"></div>
+        <div class="gold2"></div>
+        <div class="blue2"></div>
+      </div>
+    </div>
+    <div class="activity">
+      <h2>Layout 3</h2>
+      <div class="content3">
+        <div class="red3"></div>
+        <div class="green3"></div>
+        <div class="gold3"></div>
+        <div class="blue3"></div>
+      </div>
+    </div>
+
+    <div class="activity">
+      <h2>Layout 4</h2>
+      <div class="content4">
+        <div class="red4"></div>
+        <div class="green4"></div>
+        <div class="gold4"></div>
+        <div class="blue4"></div>
+      </div>
+    </div>
+
+    <div class="activity">
+      <h2>Layout 5</h2>
+      <div class="content5">
+        <div class="red5"></div>
+        <div class="green5"></div>
+        <div class="gold5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem deleniti, quaerat laborum quos soluta libero numquam dicta odit commodi, omnis ipsum aut nam alias? Sapiente aliquid consectetur sed minima beatae officia sunt cum magni, tempora illum cumque iure ipsum eaque quaerat dignissimos quia tenetur provident explicabo dolorum reiciendis obcaecati atque reprehenderit perferendis rem. Repellat consequatur cum facere doloribus esse id debitis architecto corporis impedit consectetur perferendis quisquam veniam deleniti excepturi, aperiam natus fuga sapiente, laudantium quam ipsam voluptates quidem? Repellendus ea consequatur deleniti ducimus inventore doloribus aspernatur in quidem vel cupiditate nobis facilis minima accusantium porro exercitationem, quam amet ipsa.</div>
+        <div class="blue5"></div>
+      </div>
+    </div>
+
+    <div class="activity">
+      <h2>Layout 6</h2>
+      <div class="content6">
+        <div class="red6"></div>
+        <div class="green6"></div>
+        <div class="gold6"></div>
+        <div class="blue6"></div>
+      </div>
+    </div>
+  </body>
+</html>
