updates to wk 5 assignment

--- a/project/index.html
+++ b/project/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raging River Rafters - Your adventure begins here!</title>
-    <meta name="description" content="This is the home page for Raging River Rafters.  This page tells the visitor what we do and why we do it.">
+    <meta name="description" content="This is the home page for Raging River Rafters.">
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 
