--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
         <li>Week 6: <a href="w6layoutassignment.html">Assignment: CSS Layout and Positioning</a></li>
         <br>
-        <li>Week 7: <a href="w6layoutassignment.html">Assignment: Raging River Rafters - Finished Site Home Page</a></li>
+        <li>Week 7: <a href="project/">Assignment: Raging River Rafters - Finished Site Home Page</a></li>
         <br>
       </ul>
     </main>
