wk 7 final upload

--- a/project/index.html
+++ b/project/index.html
@@ -14,9 +14,9 @@
     <div class="page-container">
       <header>
         <div class="header">
-          <picture>
+          <div class="picture">
             <img src="images/rrr_logo.png" alt="Raging River Rafters Logo">
-          </picture>
+          </div>
           <section class="heading">
             <h1>Raging River Rafters</h1>
             <div class="motto">Your adventure begins here!</div>
@@ -28,13 +28,21 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">FAQs</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">About Us</a></li>
           </ul>
         </div>        
       </nav>
       <main>
         <div class="banner-box">
-          <img src="images/rafting_rush.jpg" alt="What we do">
+          <div class="banner-box-img">
+            <img src="images/rafting_rush.jpg" alt="What we do">
+          </div>
+          <div class="action">
+            <h3>Plan your next adventure with us!</h3>
+            <div class="action-button">
+              <button>Contact Us</button>
+            </div>
+          </div>
         </div>
         <div class="home-grid">
           <h2 class="home-headline-1">We run Rivers to relax.</h2>
@@ -69,17 +77,16 @@
       </main>
       <footer>
         <div class="footer">
-          <div class="footer">
-            <p>
-              &copy;2020 Raging River Rafters - Ken Tolman - WDD 130
-            </p>
-          </div>
-          <div class="social-images">
+          <div class="bottom-title">
+            <p>&copy;2020 Raging River Rafters - Ken Tolman - WDD 130
+          </p>
+        </div>
+          <section class="social-images">
             <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
             <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
             <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
-          </div>
-        </div>
+          </section>
+        </div>  
       </footer>
     </div>
   </body>
