rafting project updates

--- a/project/index.html
+++ b/project/index.html
@@ -76,17 +76,15 @@
         </div>
       </main>
       <footer>
-        <div class="footer">
-          <div class="bottom-title">
-            <p>&copy;2020 Raging River Rafters - Ken Tolman - WDD 130
+        <div class="footer-text">
+          <p>&copy;2020 Raging River Rafters - Ken Tolman - WDD 130
           </p>
         </div>
-          <section class="social-images">
-            <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
-            <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
-            <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
-          </section>
-        </div>  
+        <div class="social-images">
+          <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
+          <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
+          <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
+        </div>
       </footer>
     </div>
   </body>
