--- a/project/index.html
+++ b/project/index.html
@@ -26,9 +26,9 @@
       <nav>
         <div class="nav">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="faqs.html">FAQs</a></li>
+            <li><a href="about.html">About Us</a></li>
           </ul>
         </div>        
       </nav>
