--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <br>
         <li>Week 7: <a href="project/">Assignment: Raging River Rafters - Finished Site Home Page</a></li>
         <br>
+        <li>Week 9: <a href="project/">Assignment: Raging River Rafters - Completed Rafting Company Site</a></li>
+        <br>
       </ul>
     </main>
     <footer>
