--- a/project/about.html
+++ b/project/about.html
@@ -26,7 +26,7 @@
       <nav>
         <div class="nav">
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="faqs.html">FAQs</a></li>
             <li><a href="about.html">About Us</a></li>
           </ul>
