--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <br>
         <li>Week 9: <a href="project/">Assignment: Raging River Rafters - Completed Rafting Company Site</a></li>
         <br>
+        <li>Week 9: <a href="final_project/">Assignment: Final Project - Site Plan</a></li>
+        <br>
       </ul>
     </main>
     <footer>
