--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li>Week 7: <a href="project/">Assignment: Raging River Rafters - Finished Site Home Page</a></li>
         <br>
         <li>Week 9: <a href="project/">Assignment: Raging River Rafters - Completed Rafting Company Site</a></li>
-        <li>Week 9: <a href="final_project/">Assignment: Final Project - Site Plan</a></li>
+        <li>Week 9: <a href="final_project/site-plan/">Assignment: Final Project - Site Plan</a></li>
         <br>
       </ul>
     </main>
