--- a/final_project/site-plan/index.html
+++ b/final_project/site-plan/index.html
@@ -63,7 +63,7 @@
       <h4>Heading Font: Open Sans, sans-serif</h4>
       <p>
         I found several websites that listed these two fonts as top choices because they work well together.  They 
-        are both crispccand extremely legible.  They also work well if they are swapped around.
+        are both crisp and extremely legible.  They also work well if they are swapped around.
       </p>
 
       <h4>Paragraph Font: Roboto, sans-serif</h4>
