--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <li>Week 9: <a href="project/">Assignment: Raging River Rafters - Completed Rafting Company Site</a></li>
         <li>Week 9: <a href="final_project/site-plan/">Assignment: Final Project - Site Plan</a></li>
         <br>
+        <li>Week 10: <a href="html_forms.html">Activity: HTML Forms</a></li>
+        <br>
       </ul>
     </main>
     <footer>
