--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
     <main>
       <h2>Assignment Links</h2>
       <ul>
-        <li>Week 1: <a href="aboutme.html">About Me</a></li>
+        <li>Week 1: <a href="class/aboutme.html">About Me</a></li>
         <br>
-        <li>Week 2: <a href="site-plan.html">Raging River Site Plan</a></li>
+        <li>Week 2: <a href="class/site-plan.html">Raging River Site Plan</a></li>
         <br>
-        <li>Week 3: <a href="troubleshooting.html">Troubleshooting Activity</a></li>
+        <li>Week 3: <a href="class/troubleshooting.html">Troubleshooting Activity</a></li>
         <li>Week 3: <a href="project/">Raging River Rafters</a></li>
         <br>
         <li>Week 4: <a href="project/">Raging River Rafters - w/CSS</a></li>
         <br>
         <li>Week 5: <a href="project/">Raging River Rafters - w/more CSS</a></li>
         <br>
-        <li>Week 6: <a href="w6-exercise-1.html">Activity: CSS Layout</a></li>
-        <li>Week 6: <a href="w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
-        <li>Week 6: <a href="w6layoutassignment.html">Assignment: CSS Layout and Positioning</a></li>
+        <li>Week 6: <a href="class/w6-exercise-1.html">Activity: CSS Layout</a></li>
+        <li>Week 6: <a href="class/w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
+        <li>Week 6: <a href="class/w6layoutassignment.html">Assignment: CSS Layout and Positioning</a></li>
         <br>
         <li>Week 7: <a href="project/">Assignment: Raging River Rafters - Finished Site Home Page</a></li>
         <br>
         <li>Week 9: <a href="project/">Assignment: Raging River Rafters - Completed Rafting Company Site</a></li>
         <li>Week 9: <a href="final_project/site-plan/">Assignment: Final Project - Site Plan</a></li>
         <br>
-        <li>Week 10: <a href="html_forms.html">Activity: HTML Forms</a></li>
+        <li>Week 10: <a href="class/html_forms.html">Activity: HTML Forms</a></li>
         <br>
       </ul>
     </main>
