main index.html update

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li>Week 9: <a href="final_project/site-plan/">Assignment: Final Project - Site Plan</a></li>
         <br>
         <li>Week 10: <a href="class/html_forms.html">Activity: HTML Forms</a></li>
+        <li>Week 10: <a href="final_project/">Activity: Final Web Site Progress</a></li>
         <br>
       </ul>
     </main>
