--- a/project/index.html
+++ b/project/index.html
@@ -1,91 +1,103 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Raging River Rafters - Your adventure begins here!</title>
-    <meta name="description" content="This is the home page for Raging River Rafters.">
-    <link rel="stylesheet" href="css/style.css"/>
+    <title>Hiking Utah's Site Plan</title>
+    <link href="css/site-plan.css" rel="stylesheet">
   </head>
 
   <body>
-    <div class="page-container">
-      <header>
-        <div class="header">
-          <div class="picture">
-            <img src="images/rrr_logo.png" alt="Raging River Rafters Logo">
-          </div>
-          <section class="heading">
-            <h1>Raging River Rafters</h1>
-            <div class="motto">Your adventure begins here!</div>
-          </section>
-        </div>
-      </header>
+    <header>
+      <h1>Hiking Utah's Site Plan</h1>
+      <div class="signature">Ken Tolman</div>
+    </header>
+    <main>
+      <h2>Overview</h2>
+      <h3>Purpose</h3>
+      <p>Have you ever gone to a movie without checking its reviews or asking friends what they thought about it? Not many 
+        people do. Well, the same could be said regarding hiking in Utah. With so many hiking trails Utah has to offer, where 
+        does one start to explore? My website will provide that friendly review and detailed information that the average 
+        visitor or even local resident will be happy to use when making their hiking choices. This website will provide 
+        simple directions and details regarding the actual hike. Every hike on my site will be one I have taken personally. 
+        The site will also include reviews from myself and others that have ventured these trails. With this information, anyone 
+        can enjoy the magnificent beauty of the wonder we call Utah.
+      </p>
+      
+      <h3>Audience</h3>
+      <p>Content
+        The individuals coming to this site will be from all over the world with a plan to hike right here in our back yard. 
+        They will be from all walks of life, nearly any age looking for various levels of hiking options. They will be able to 
+        gather the majority of the information they will need to choose the best hike for their situation.  They will also be 
+        able to look through reviews left by other hikers to help make their choice.
+      </p>
+      <hr>
+
+      <h2>Branding</h2>
+      <h3>Website Logo</h3>
+      <img src="ut_hiker.jpg" alt="Hiking Utah Logo">
+      <hr>
+      
+      <h2>Style Guide</h2>
+      <h3>Color Palette</h3>
+      <p>
+        Palette URL:<a href="https://coolors.co/2b2118-6f1a07-ecf0f1-a8763e-ffffff" target="_blank">https://coolors.co/2b2118-6f1a07-ecf0f1-a8763e-ffffff</a>
+      </p>
+      <table class="colors">
+        <tr>
+          <th>Primary</th>
+          <th>Secondary</th>
+          <th>Accent 1</th>
+          <th>Accent 2</th>
+        </tr>
+        <tr>
+          <td class="primary">[#2B2118]<br>RAISIN BLACK</td>
+          <td class="secondary">[#6F1A07]<br>Kenyan Copper</td>
+          <td class="accent1">[#ECF0F1]<br>Anti-Flash White</td>
+          <td class="accent2">[#A8763E]<br>Metallic Sunburst</td>
+        </tr>
+      </table>
+      <br>
+      <hr>
+
+      <h3>Typography</h3>
+      <h4>Heading Font: Open Sans, sans-serif</h4>
+      <p>
+        I found several websites that listed these two fonts as top choices because they work well together.  They 
+        are both crisp and extremely legible.  They also work well if they are swapped around.
+      </p>
+
+      <h4>Paragraph Font: Roboto, sans-serif</h4>
+      <p>
+        Same comment as above.
+      </p>
+
+      <h4>Normal paragraph example</h4>
+      <p>
+        Experience the beauty of Utah—intimate and up close—as you walk and hike through a desert and red rock landscape 
+        full of legends, icons and inspiring panoramic vistas.  From world-famous national parks to hidden desert corners, 
+        Utah holds treasures unlike anywhere else.
+      </p>
+      <hr>
+
+      <h3>Navigation</h3>
       <nav>
-        <div class="nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
-            <li><a href="about.html">About Us</a></li>
-          </ul>
-        </div>        
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Page2</a></li>
+          <li><a href="#">Page3</a></li>
+        </ul>        
       </nav>
-      <main>
-        <div class="banner-box">
-          <div class="banner-box-img">
-            <img src="images/rafting_rush.jpg" alt="What we do">
-          </div>
-          <div class="action">
-            <h3>Plan your next adventure with us!</h3>
-            <div class="action-button">
-              <button>Contact Us</button>
-            </div>
-          </div>
-        </div>
-        <div class="home-grid">
-          <h2 class="home-headline-1">We run Rivers to relax.</h2>
-          <p class="home-paragraph-1">
-            We believe that there is nothing like a river trip for relaxing. That 
-            is why we subscribe to the dry oar philosophy of boating. Keeping your 
-            oars dry for us means taking time to look around and notice the beauty 
-            that surrounds the rivers we love.
-          </p>
-          <div class="home-right-img">
-            <img src="images/rafting_relax.jpg" alt="Relaxing river trip">
-          </div> 
-          <h2 class="home-headline-2">We run Whitewater for the Rush.</h2>
-          <p class="home-paragraph-2">
-            That doesn't mean we don't also like rapids. Opposites in all things after 
-            all. We believe that that tenseness that comes when you are looking down 
-            the tongue of a big string of waves makes you appreciate the calm beautiful 
-            water that always follows even more.
-          </p>
-          <div class="home-left-img">
-            <img src="images/rafting_fun.jpg" alt="White water fun">
-          </div>
-          <section class="home-paragraph-3">
-            <h2>Come Run with us!</h2>
-            <p>
-              We invite you to come relax with us on one of the amazing rivers we visit. 
-              Check out our trips and let us know which one best suits you. We're waiting 
-              to hear from you!
-            </p>
-          </section>
-        </div>
-      </main>
-      <footer>
-        <div class="footer-text">
-          <p>&copy;2020 Raging River Rafters - Ken Tolman - WDD 130
-          </p>
-        </div>
-        <div class="social-images">
-          <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
-          <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
-          <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
-        </div>
-      </footer>
-    </div>
+      <hr>
+
+      <h3>Site Map</h3>
+      <p>Coming soon ...</p>
+      <hr>
+
+      <h3>Wireframes</h3>
+      <p>Coming soon ...</p>
+      <hr>
+
+    </main>
+    <footer>Ken Tolman | BYU-Idaho | WDD 130 - Web Fundamentals</footer>
   </body>
 </html>
