--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li>Week 10: <a href="class/html_forms.html">Activity: HTML Forms</a></li>
         <li>Week 10: <a href="final_project/">Activity: Final Web Site Progress</a></li>
         <br>
+        <li>Week 11: <a href="table.html">Activity: Table Build</a></li>
+        <br>
       </ul>
     </main>
     <footer>
