final upload for w12

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <li>Week 10: <a href="class/html_forms.html">Activity: HTML Forms</a></li>
         <li>Week 10: <a href="final_project/">Activity: Final Web Site Progress</a></li>
         <br>
-        <li>Week 11: <a href="table.html">Activity: Table Build</a></li>
+        <li>Week 11: <a href="class/table.html">Activity: Table Build</a></li>
+        <br>
+        <li>Week 12: <a href="class/table.html">Activity: Media Card</a></li>
         <br>
       </ul>
     </main>
