--- a/class/table.html
+++ b/class/table.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WDD 130 | W11 Activity: Table Build | Ken Tolman</title>
-  <link rel="stylesheet" href="table.css">
+  <link rel="stylesheet" href="css/table.css">
 </head>
 <body>
   <table>
