--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br>
         <li>Week 11: <a href="class/table.html">Activity: Table Build</a></li>
         <br>
-        <li>Week 12: <a href="class/table.html">Activity: Media Card</a></li>
+        <li>Week 12: <a href="class/card.html">Activity: Media Card</a></li>
         <br>
       </ul>
     </main>
