upload for final project

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hiking Utah - The best views are found here!</title>
     <meta name="description" content="This is the home page for Hiking Utah.">
@@ -12,6 +11,15 @@
 
   <body>
     <div class="page-container">
+      <nav>
+        <div class="nav">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Adams Canyon</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>        
+      </nav>
       <header>
         <div class="header">
           <section class="heading">
@@ -23,28 +31,30 @@
           </div>
         </div>
       </header>
-      <nav>
-        <div class="nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-          </ul>
-        </div>        
-      </nav>
       <main>
         <div class="banner-box">
-          <!--<div class="banner-box-img">
-            <img src="images/rafting_rush.jpg" alt="What we do">
-          </div>--->
+          <div class="banner-box-img">
+            <img src="images/grandview.jpg" alt="Isn't it beautiful!!!">
+          </div>
+        </div>
         </div>
         <div class="home-grid">
-          <h2 class="home-headline-1">Text coming</h2>
+          <h2 class="home-headline-1">Welcome to Hiking Utah</h2>
           <p class="home-paragraph-1">
-            Text coming
+            This site is designed to provide information to anyone wanting to 
+            explore the beautiful state. Here you will find all of the well known 
+            hiking tralis and many of the less known ones as well. Each hike has 
+            it's own page that provides thefoloowing details:<br>
+            * A brief synopsys of the hike.<br>
+            * Directions to the trailhead.<br>
+            * The difficulty of the hike.<br>
+            * Hike distance and elevation changes.<br>
+            * Pictures<br>
+            * Other hiker reviews.<br>
+            * Any needed warnings.<br>
           </p>
           <div class="home-right-img">
-            <img src="images/misc_pic.jpg" alt="Stewart Falls">
+            <img src="images/stewfalls.jpg" alt="Stewart Falls">
           </div> 
         </div>
       </main>
@@ -52,11 +62,6 @@
         <div class="footer-text">
           <p>&copy;2020 Hiking Utah - Ken Tolman - WDD 130
           </p>
-        </div>
-        <div class="social-images">
-          <a href="https://www.facebook.com" target="_blank" title="Hiking Utah on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
-          <a href="https://www.instagram.com" target="_blank" title="Hiking Utah on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
-          <a href="https://www.youtube.com" target="_blank" title="Hiking Utah on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
         </div>
       </footer>
     </div>
