--- a/final_project/index.html
+++ b/final_project/index.html
@@ -44,14 +44,14 @@
             This site is designed to provide information to anyone wanting to 
             explore the beautiful state. Here you will find all of the well known 
             hiking tralis and many of the less known ones as well. Each hike has 
-            it's own page that provides thefoloowing details:<br>
+            it's own page that provides the following details:<br>
             * A brief synopsys of the hike.<br>
             * Directions to the trailhead.<br>
             * The difficulty of the hike.<br>
             * Hike distance and elevation changes.<br>
-            * Pictures<br>
             * Other hiker reviews.<br>
             * Any needed warnings.<br>
+            * And of course  -  Pictures<br>
           </p>
           <div class="home-right-img">
             <img src="images/stewfalls.jpg" alt="Stewart Falls">
