final project - upload

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -15,8 +15,8 @@
         <div class="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Adams Canyon</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="adamscan.html">Adams Canyon</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>        
       </nav>
@@ -37,21 +37,28 @@
             <img src="images/grandview.jpg" alt="Isn't it beautiful!!!">
           </div>
         </div>
-        </div>
         <div class="home-grid">
-          <h2 class="home-headline-1">Welcome to Hiking Utah</h2>
+          <h1 class="home-title">Welcome to Hiking Utah</h1>
+          <h2 class="home-headline-1">What you will find on the site.</h2>
           <p class="home-paragraph-1">
             This site is designed to provide information to anyone wanting to 
-            explore the beautiful state. Here you will find all of the well known 
-            hiking tralis and many of the less known ones as well. Each hike has 
-            it's own page that provides the following details:<br>
-            * A brief synopsys of the hike.<br>
-            * Directions to the trailhead.<br>
-            * The difficulty of the hike.<br>
-            * Hike distance and elevation changes.<br>
-            * Other hiker reviews.<br>
-            * Any needed warnings.<br>
-            * And of course  -  Pictures<br>
+            explore this beautiful state. Here you will find all of the well known 
+            hiking tralis and many of the less known ones as well. 
+            <br>
+            <br>
+            Each hike has it's own page that provides the following details:<br>
+            <br>
+            A brief synopsys of the hike.<br>
+            <br>
+            The difficulty of the hike.<br>
+            <br>
+            Hike distance and elevation changes.<br>
+            <br>
+            Directions to the trailhead.<br>
+            <br>
+            Reviews from other hikers.<br>
+            <br>
+            And of course  -  Pictures<br>
           </p>
           <div class="home-right-img">
             <img src="images/stewfalls.jpg" alt="Stewart Falls">
@@ -60,9 +67,14 @@
       </main>
       <footer>
         <div class="footer-text">
-          <p>&copy;2020 Hiking Utah - Ken Tolman - WDD 130
+          <p>&copy;2020 Hiking Utah - Ken Tolman - WDD 130 - <a href="site-plan/site-plan.html">Site Plan</a>
           </p>
         </div>
+        <div class="social-images">
+          <a href="https://www.facebook.com" target="_blank" title="Raging River on Facebook"><img src="images/facebookicon.png" alt="Facebook icon"></a>
+          <a href="https://www.instagram.com" target="_blank" title="Raging River on Instagram"><img src="images/instagramicon.png" alt="Instagram icon"></a>
+          <a href="https://www.youtube.com" target="_blank" title="Raging River on YouTube"><img src="images/youtubeicon.png" alt="Youtube icon"></a>
+        </div>        
       </footer>
     </div>
   </body>
