--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <br>
         <li>Week 12: <a href="class/card.html">Activity: Media Card</a></li>
         <br>
+        <li>Week 14: <a href="final_project/index.html">Final Project</a></li>
+        <br>
       </ul>
     </main>
     <footer>
