--- a/final_project/site-plan/site-plan.html
+++ b/final_project/site-plan/site-plan.html
@@ -13,7 +13,7 @@
     <div class="page-container">
       <header>
         <h1>Hiking Utah's Site Plan</h1>
-        <div class="signature">Ken Tolman</div>
+        <h4>Ken Tolman</h4>
       </header>
       <main>
         <h2>Overview</h2>
@@ -68,7 +68,7 @@
             <th>Accent 2</th>
           </tr>
           <tr>
-            <td class="primary">[#2B2118]<br>RAISIN BLACK</td>
+            <td class="primary">[#2B2118]<br>Raisin Black</td>
             <td class="secondary">[#6F1A07]<br>Kenyan Copper</td>
             <td class="accent1">[#ECF0F1]<br>Anti-Flash White</td>
             <td class="accent2">[#A8763E]<br>Metallic Sunburst</td>
